--- a/style.css
+++ b/style.css
@@ -1,60 +1,116 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+*	{
+	box-sizing: border-box;
+}
 /* * {
   padding: 0;
   margin: 0;
 } */
 
-body {
-	background-color: #f1f1f1;
+.body {
+	margin: 0;
+	background-color: white;
 	color: #0f141e;
-
 	font-size: 16px;
 	font-weight: normal;
 	font-family: 'Roboto', sans-serif;
-
-	/* font: normal 16px 'Roboto', sans-serif; */
-
-	/* font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
 }
 
-a {
-	color: black;
-	text-decoration: none;
+/* Box Model */
+.container { 
+	background-color: #f1f1f1;
+	width: 100%;
+	max-width: 2500px;
+	margin: 0;
+	padding: 0;
+} 
+
+.card {
+	display: flex;
+	padding: 25px 40px;
+	margin-bottom: 10; 
+	border-bottom: 15px solid black;
 }
 
-a:hover {
-	text-decoration: underline;
+.my_card {
+	padding: 25px 40px;
+	/* margin-bottom: 10;  */
+	/* border-radius: 0px; */
+	background-color: white;
+	border-bottom: 1px solid #333;
 }
-
-a:active {
-	color: blue;
-}
-
-a:visited {
-	color: grey;
-}
-
-.avatar {
-	width: 200px;
-	border-radius: 28px;
-	box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+.my_card h1 h2 h3 {
+	text-align: left;
+	margin-bottom: 10px;
 }
 
 .info {
 	display: flex;
-	margin-bottom: 20px;
+	justify-content: center;
+	align-items: center;
+	background-color:#f1f1f1;
+	/* flex-wrap: wrap;  */
+	/* align-content: center;
+	justify-content: center; 
+	justify-items: center;  */ 
+	margin-bottom: 0px;
+	margin-top: 0px;
+	padding: 15px;
 }
 
-@media (max-width: 700px) {
+.info a {
+	color: black;
+	font-size: 20px;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+#reg_nomer {
+	font-size: 20px;
+	font-style: normal;
+	font-weight: normal; 
+	font-family: 'Roboto', sans-serif;
+}
+
+.info a:hover {
+	color: #0a33ec;
+	text-decoration: underline;
+}
+
+.avatar {
+	width: 300px;
+	height: 100%;
+	border-radius: 28px;
+	box-shadow: 12px 9px 15px rgba(0, 0, 0, 0.25);
+	margin-top: 15px; 
+	margin: 15px 0px;
+}
+
+@media (max-width: 1050px) {
 	.info {
 		text-align: center;
-		display: block;
-	}
+		display: block; 
+	} 
 }
 
+@media (max-width: 900px) {
+	.rezume {
+		text-align: center;
+		display: none; 
+	} 
+}
 .info-text {
 	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 10px;
+}
+
+.info-img {
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 10px;
+	margin-bottom: 15px;
 }
 
 .info-text h4 {
@@ -62,71 +118,64 @@ a:visited {
 }
 
 .info p {
-	font-size: 24px;
-  color: #86898f;
-	margin: 0;
+	font-size: 28px;
+	color: #86898f;
+	margin-bottom: 10px;
 	font-style: italic;
 	font-weight: bold;
 	text-decoration: none;
-	/* text-transform: uppercase; */
-	/* letter-spacing: 5px; */
-	/* word-spacing: 42px; */
 }
 
-/* Box Model */
-.container {
-	/* max-width: 750px; */
-	margin: auto;
-	padding-top: 30px;
+.navbar { 
+display: flex;
+background: #e7e7da;
+font-size: 20px;
+color: #86898f;
+padding: 0;
+margin: 0;
+border-bottom: 1px solid #333;
+font-style: normal;
+font-weight: normal;
+text-decoration: none;
+ }    
+
+.navbar a:hover {
+  color: rgb(22, 20, 20);
+	font-weight: bold;
+ }	
+
+.bg-red {
+	background: #eee2e2; 
 }
-
-/* .social { */
-/* background: green; */
-/* padding: 15px; */
-/* padding: 15px 40px; */
-/* padding: 15px 20px 25px 30px; */
-/* padding-top: 15px;
-  padding-right: 20px;
-  padding-bottom: 25px;
-  padding-left: 30px;
-  margin: 5px;
-
-  border: 5px solid red;
-  border-bottom-style: dotted;
-  border-top-width: 15px;
-  border-right-color: blue; */
-/* } */
-
-/* .box-model > div {
-  float: left;
-  background: #000;
-  height: 200px;
-  border: 4px solid red;
-  width: 25%;
-  box-sizing: border-box;
-} */
 
 .bg-yellow {
-	background: #fff9dc;
+	background-color: #FFFFE0; 
+	color: #000;
 }
 
 .bg-green {
-	background: #e5ffe7;
+	background: #eceeea; 
 }
 
-.bg-red {
-	background: #ffe5e5;
+.bg-blue {
+	background: #0175A7; 
+	color: #fff;
 }
 
-.card {
-	padding: 15px 20px;
-	margin-bottom: 20px;
-	border-radius: 20px;
+.bg-light-green {
+	background: #dbe9c5; 
+	
 }
 
-.card h2 {
-	margin-bottom: 10px;
+.bg-gray {
+	background-color: #f1f1f1; 
 }
+
+.bg-dark {
+	background-color: #A9A9A9; 
+	color: #FFFAFA;
+}
+
 
 .list {
 	padding: 0 20px;
@@ -137,8 +186,21 @@ a:visited {
 	margin-bottom: 10px;
 }
 
-.table {
+.table-group h2 {
+	text-align: left;
+	padding-top: 1rem;
+}
+.table-group {
+	display: inline-block;
 	width: 100%;
+	justify-content: center;
+
+}
+
+.table {
+	display: inline-table;
+	width: 100%;
+	justify-content: center;
 }
 
 .table td {
@@ -149,6 +211,13 @@ a:visited {
 .table td:nth-child(3) {
 	color: #86898f;
 }
+
+.table-name	{
+	text-align: center;
+}
+/* .head-table {
+	text-align: center;
+} */
 
 /* .table tr:nth-child(odd) {
   background: red;
@@ -165,9 +234,9 @@ a:visited {
 	border-bottom: 1px solid #ccc;
 }
 
-.contact h2 {
+/* h2 {
 	text-align: center;
-}
+} */
 
 .form-group label {
 	display: block;
@@ -189,7 +258,7 @@ a:visited {
 }
 
 .row {
-	display: flex;
+	display: inline-block;
 	margin-bottom: 20px;
 }
 
@@ -212,25 +281,135 @@ a:visited {
 }
 
 .btn:hover {
-	background: #d317aa;
-  opacity: 0.7;
+	background: #4988c7;
+	font-weight: bold;
+	color: fff;
+	/* opacity: 0.7; */
 }
 
-/* Position */
+.rezume {
+	display: flex;
+	background: #227088;
+	color: #fff;
+	font-size: 20px;
+	font-weight: normal;
+	font-family: 'Roboto', sans-serif;
+	padding: 10px;
+	margin: 0;
 
-/* .position {
-  position: relative;
-  border: 4px solid black;
-  margin-top: 40px;
-  padding: 20px;
-  height: 300px;
 }
 
-.box {
-  position: fixed;
-  top: 0;
-  left: 0px;
-  width: 100%;
-  height: 50px;
-  background:lightcoral;
+.rezume p {
+	padding: 0 15px;
+	margin: 0 10px;
+	text-align: center;
+	/* margin: 0; */
+}
+/* .card-competence {
+	display: inline-block; 
+	box-sizing: border-box;
+	background-color: #f1f1f1;
+	padding: 15px;
+	margin: 0px;
 } */
+
+/* .uslugi {
+	display: block;
+	background: #fff;
+	margin-bottom: 0px;
+	margin-top: 0px;
+} */
+
+.priceblock {
+	display: block;
+	width: 100%;
+	background: #f1f1f1;
+	margin: 0 20px 20px 0;
+	padding: 10px;
+}
+
+/* .pricetable {
+	background-color: white;
+} */
+
+/* #pricetable {
+	background-color: fff;
+} */
+
+.uslugiblock {
+	display: block;
+	width: 100%;
+	background: #227088;
+	margin: 0 20px 20px 0;
+	/* margin: 20px; */
+	padding: 10px;
+	/* margin-bottom: 0px;
+	margin-top: 0px; */
+}
+
+.uslugiblock h1{
+	text-align: center;
+	color: white;
+	
+}
+
+/* .uslugiblock.accordion.accordion-item {
+	background-color: #1c41af;
+}
+.uslugiblock.accordion.accordion-item.accordion-header h2 {
+	font-size: 16px;
+	font-weight: bold;
+} */
+
+#pricetable {
+	/* display: table; */
+	/* max-width: 100%; */
+	width: 100%;
+	margin-bottom: 20px;
+	padding-bottom: 5px;
+	/* font-size: 14px; */
+  line-height: 1.42857143;
+	min-height: .01%;
+  /* overflow-x: auto; */
+	border: 1px solid #ddd;
+	/* border: spacing 0;
+	border-collapse: collapse;
+	background-color: transparent; */
+
+}
+
+.table-boarded {
+	border: 1px solid #ddd;
+}
+
+.table-responsive {
+	min-height: .01%;
+  overflow-x: auto;
+}
+.card-faq {
+	background: #F0FFF0;
+	margin: 10 px;
+	padding: 10px;
+}
+
+.card-consult {
+	background-color: #fff;
+	margin: 10 px;
+	padding: 10px;
+}
+
+.card-contact {
+	background: #FFFF;
+	margin: 10 px;
+	padding: 10px;
+}
+
+.footer {
+	font-size: 12px;
+  background-color: #000;
+	color: white;
+	text-align: center;
+  padding: 5px;
+  /* padding-bottom: 0px; */
+	margin: 0;
+}
